--- a/.github/workflows/verify-jest-setup.yml
+++ b/.github/workflows/verify-jest-setup.yml
@@ -3,7 +3,7 @@ name: Verify Jest Setup
 on:
   push:
     branches:
-      - main
+      - master
     paths:
       - 'package.json'
       - 'jest.config.ts'
